# spam-slaya

./: .dockerignore  .env.example  .gitignore  App.py  CNAME  Dockerfile  LICENSE  README.md  ai_utils.py  app.py  client_secret.json  docker-compose.yml  hello.py  index.html  pyproject.toml  requirements.txt  run.py  setup-worker.sh  tasks.py  utils.py  worker.py
app/: __init__.py  config.py  models.py  tasks.py  views.py
app/templates/: activate-llm.html  base.html  home.html  index.html  llm_activate.html  run_status.html
app/utils/: ai.py  email.py
static/css/: style.css
templates/: index.html  llm_activate.html  mail_action.html
