[project]
name = "clean-that-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.2.5",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "instructor==1.4.0",
    "openai>=1.42.0",
    "pydantic>=2.8.2",
]
